tests/neg/i13815.check

-- [E008] Not Found Error: tests/neg/i13815/Test_2.scala:1:14 ----------------------------------------------------------
1 |val box = Box.fromProduct((1, "a"))  // error
  |          ^^^^^^^^^^^^^^^
  |          value fromProduct is not a member of object Box
-- [E008] Not Found Error: tests/neg/i13815/Test_2.scala:2:26 ----------------------------------------------------------
2 |val circleOrdinal = Shape.ordinal(Shape.Circle(r = 23)) // error
  |                    ^^^^^^^^^^^^^
  |                    value ordinal is not a member of object Shape
